--- a/frontend/src/css/Chat.css
+++ b/frontend/src/css/Chat.css
@@ -23,7 +23,7 @@
 
 /* Chat List (Left Sidebar) */
 .chat-list {
-  width: 400px;
+  width: 35vw;
   background: #fff;
   padding: 20px;
   overflow-y: auto;
@@ -66,6 +66,7 @@
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   height: 100%;
   min-width: 800px;
+  flex: 1 1;
 }
 
 /* Chat Header */
@@ -175,7 +176,7 @@
 }
 
 .unread-badge {
-  background-color: #C6553B;
+  background-color: #c6553b;
   color: white;
   border-radius: 50%;
   padding: 2px 6px;
@@ -228,13 +229,13 @@
   flex-grow: 1;
   display: flex;
   flex-direction: column;
+  overflow-x: auto;
   overflow-y: auto;
   padding: 20px;
   background: #fff;
   /* background-image: url("/src/assets/Chatbg.png");
   background-blend-mode:darken;
   background-size: cover; */
-
 }
 
 /* Scrollbar styling */
@@ -434,14 +435,11 @@
 .message.sent .message-timestamp {
   float: right;
   color: rgba(248, 246, 246, 0.753);
-
 }
 .message.received .message-timestamp {
   float: left;
   color: rgba(0, 0, 0, 0.5);
-
 }
-
 
 /* .message.sent .message-content {
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100%25' height='100%25' viewBox='0 0 200 100'%3E%3Cdefs%3E%3Cpattern id='softPattern' patternUnits='userSpaceOnUse' width='50' height='50'%3E%3Crect width='50' height='50' fill='rgba(255,255,255,0.1)'/%3E%3Ccircle cx='25' cy='25' r='10' fill='rgba(255,255,255,0.05)'/%3E%3C/pattern%3E%3C/defs%3E%3Crect width='100%25' height='100%25' fill='url(%23softPattern)'/%3E%3C/svg%3E");
@@ -452,4 +450,3 @@
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100%25' height='100%25' viewBox='0 0 200 100'%3E%3Cdefs%3E%3Cpattern id='softPattern' patternUnits='userSpaceOnUse' width='50' height='50'%3E%3Crect width='50' height='50' fill='rgba(0,0,0,0.05)'/%3E%3Ccircle cx='25' cy='25' r='10' fill='rgba(0,0,0,0.03)'/%3E%3C/pattern%3E%3C/defs%3E%3Crect width='100%25' height='100%25' fill='url(%23softPattern)'/%3E%3C/svg%3E");
   background-blend-mode: overlay;
 } */
- 
